ensure that overflow on the y axis is clipped.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow-y: hidden;
 }
 
 table {
@@ -24,7 +25,7 @@ tr {
 }
 
 img {
-    height: 100vh;
+    height: 97vh;
 }
 
 #horizontal_wrap {
